exports[`test should render a default component 1`] = `
<button
  aria-selected={false}
  className="terra-ButtonGroupButton" />
`;

exports[`test should render as selected 1`] = `
<button
  aria-selected={true}
  className="terra-ButtonGroupButton is-selected" />
`;

exports[`test should render with icon and text 1`] = `
<button
  aria-selected={false}
  className="terra-ButtonGroupButton">
  <img
    alt="icon" />
  <span
    className="terra-ButtonGroupButton-text">
    text
  </span>
</button>
`;

exports[`test should render with icon and text reversed 1`] = `
<button
  aria-selected={false}
  className="terra-ButtonGroupButton">
  <span
    className="terra-ButtonGroupButton-text">
    text
  </span>
  <img
    alt="icon" />
</button>
`;

exports[`test should render with icon only 1`] = `
<button
  aria-selected={false}
  className="terra-ButtonGroupButton">
  <img
    alt="icon" />
</button>
`;

exports[`test should render with text 1`] = `
<button
  aria-selected={false}
  className="terra-ButtonGroupButton">
  <span
    className="terra-ButtonGroupButton-text">
    text
  </span>
</button>
`;
